# TrivMe-backend

./: .gitignore  README.md  generate.py  main.py  models.py  pyproject.toml  test_main.py
