[project]
name = "trivme-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "google-genai>=1.59.0",
    "fastapi[standard]>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.1",
]
